[package]
name = "steg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = "0.10.1"
clap = { version = "4.1.4", features = ["derive"] }
hex = "0.4.3"
image = "0.24.5"
sha3 = "0.10.6"

[profile.release]
lto = true
