[package]
name = "steg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = "0.10.2"
clap = { version = "4.4.0", features = ["derive"] }
image = {version = "0.24.7", features = ["webp-encoder"]}
sha2 = "0.10.7"
